[workspace]
members = [
    "packages/*",
    "tools/nested-config",
    "apps/cli-app"
]

[workspace.dependencies]
serde = "1.0"
tokio = "1.0"
vulnerable-workspace-crate = "1.5.0"
nonexistent-workspace-lib = "2.1.0"
missing-core-utils = "1.0.0"

[package]
name = "cargo-workspace-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
vulnerable-root-crate = "1.2.0"
nonexistent-root-lib = "3.0.0"
missing-local-package = { path = "./missing-packages/core" }
phantom-security-crate = "2.5.0"

[dev-dependencies]
phantom-test-framework = "1.0.0"
missing-dev-crate = "1.8.0"
