[workspace]
members = [
    "packages/core",
    "tools/build-utils",
    "nested-configs/security-tools"
]

[package]
name = "cargo-workspace-root"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
# This should be detected as path confusion (missing local path)
missing-root-package = { path = "./missing-packages/root-lib" }
nonexistent-root-crate = "1.0.0"

[dev-dependencies]
phantom-test-framework = "1.0.0"
missing-dev-crate = "2.1.0"
