[package]
name = "security-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
tokio = "1.0"

# Path dependencies pointing to missing directories
missing-crypto-lib = { path = "../missing-crypto-package" }
phantom-security-utils = { path = "../../nonexistent-security-tools" }
missing-local-auth = { path = "./local-auth-lib" }

# Regular dependencies that don't exist in crates.io
vulnerable-nested-crate = "2.1.0"
nonexistent-security-lib = "3.0.0"
phantom-crypto-framework = "1.5.0"

[dev-dependencies]
phantom-test-crypto = "1.0.0"
missing-security-tests = "2.1.0"
