[package]
name = "build-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"

# Path dependencies to missing packages
missing-build-tools = { path = "../../missing-build-package" }
phantom-generator = { path = "../phantom-code-gen" }

# Regular dependencies that don't exist
vulnerable-build-crate = "1.3.0"
nonexistent-build-lib = "2.7.0"
